--- a/Manual.ipynb
+++ b/Manual.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Manual.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,15 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ECNSn6ZHPDQl"
+      },
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/16Ty84XScfwuE4OIBTbzSTVZRnZ4ljWIo?usp=sharing)"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -38,10 +48,9 @@
         "from torchvision import transforms, datasets, models\r\n",
         "import torchvision.utils\r\n",
         "from collections import defaultdict\r\n",
-        "import torch.nn.functional as F\r\n",
-        "from pytorch_unet.loss import dice_loss"
+        "import torch.nn.functional as F"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +89,7 @@
         "\r\n",
         "print(\"device name:\", torch.cuda.get_device_name(0))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -113,7 +122,7 @@
         "pathTrain = \"\"\r\n",
         "files = [os.path.splitext(f)[0] for f in os.listdir(pathTrain) if f.endswith('.jpg')]# + [f for f in os.listdir(path) if f.endswith('.png')]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +185,7 @@
         "  'val': DataLoader(val_set, batch_size=batch_size, shuffle=True, num_workers=0)\r\n",
         "}"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
